force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt.object-meta.xml
<CustomObject>
    <description>Conga Turbo Pricing Reverse Sync Job</description>
    <label>Conga Turbo Pricing Reverse Sync Job</label>
    <pluralLabel>Conga Turbo Pricing Reverse Sync Jobs</pluralLabel>
</CustomObject>