force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__BatchSize__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>