force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__IsActive__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Reverse Sync Job is active</description>
    <inlineHelpText>Indicates if the Reverse Sync Job is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>