force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__JobHandlerClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__JobHandlerClass__c</fullName>
    <description>The Implementation class for handling the job.</description>
    <inlineHelpText>The Implementation class for handling the job.</inlineHelpText>
    <label>Job Handler Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>