force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__LastRunTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__LastRunTime__c</fullName>
    <description>Shows the Date/Time of the last run.</description>
    <inlineHelpText>Shows the Date/Time of the last run.</inlineHelpText>
    <label>Last Run Time</label>
    <type>DateTime</type>
</CustomField>