force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__ObjectsToSync__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ObjectsToSync__c</fullName>
    <description>Comma separated list of objects to be synced by Reverse Sync process.</description>
    <inlineHelpText>Comma separated list of objects to be synced by Reverse Sync process.</inlineHelpText>
    <label>Objects To Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>