force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__RunType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__RunType__c</fullName>
    <description>Indicates if the Job run type is Batchable or Queueable</description>
    <inlineHelpText>Indicates if the Job run type is Batchable or Queueable</inlineHelpText>
    <label>Run Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batchable</fullName>
                <default>true</default>
                <label>Batchable</label>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>