force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The Sequence of the job run.</description>
    <inlineHelpText>The Sequence of the job run.</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>