force-app/main/default/objects/Apttus_Base2__CongaTurboPricingReverseSyncJob__mdt/fields/Apttus_Base2__SyncBaseObjects__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__SyncBaseObjects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you have to sync base objects (like Line Items, Summary groups etc...) also along with line item related objects</description>
    <inlineHelpText>Check this box if you have to sync base objects (like Line Items, Summary groups etc...) also along with line item related objects</inlineHelpText>
    <label>Sync Base Objects</label>
    <type>Checkbox</type>
</CustomField>